2016-02-09 Trisha Farooque <farooque@cer.ch>
	- SystmaticsAttributes class added
	- ParseConfigFiles made into static public functions
	
2016-01-30 Trisha Farooque <farooque@cern.ch>
	- Added option to read single scale for files with multiple sample names
	
2016-01-27 Trisha Farooque <farooque@cern.ch>
	- Adapted makeConfigurationFiles_TTH.cxx to make file lists from sample_info.dat files 

2016-01-26 Trisha Farooque <farooque@cern.ch>
	- Added option to read multiple samples from same file
	
2016-01-22 Trisha Farooque <farooque@cern.ch>
	- Added FileKeyAttributes class
	- Optimised configuration file parsing
	- Added NoShape option

	
2016-01-13 Trisha Farooque <farooque@cern.ch>
	- Added option to plot all histograms from input file
	- Now making ouput directory as required

	
2015-12-14 Trisha Farooque <farooque@cern.ch>
	- Variable rebinning of histograms
	- Check for existing configuration file before remaking in makeConfigurationFiles_TTH.cxx
	- Fixed crash when DRAWSTACK is used with no sample in stack