@@ -1,4 +1,9 @@
-2016-02-09 Trisha Farooque <farooque@cer.ch>
+2016-02-19 Trisha Farooque <farooque@cern.ch>
+	- Automatic scaling of histograms to remove legend overlap
+	- Bug fix: TLegend now written to ROOT file
+	- Systematics calculations added
+	
+2016-02-09 Trisha Farooque <farooque@cern.ch>
 	- SystmaticsAttributes class added
 	- ParseConfigFiles made into static public functions
 	
